# jenkinsPOC

./: .gitignore  Jenkinsfile  README.md  pyproject.toml
src/qa_log_analyzer/: analyzer.py  cli.py  report_writer.py
tests/: test_analyzer.py
