[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "qa-log-analyzer"
version = "0.1.0"
description = "QA Log Analyzer Tool"
readme = "README.md"
requires-python = ">=3.10"

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.scripts]
qa-log-analyzer = "qa_log_analyzer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]